[package]
name = "servo-control"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "servo-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "servo-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[dependencies]
sts3215-controller = "0.1.3"
eframe = { version = "0.33.3", optional = true }
egui = { version = "0.33.3", optional = true }
egui_plot = { version = "0.34.0", optional = true }

[features]
default = []
gui = ["eframe", "egui", "egui_plot"]
